<resources>
    <string name="app_name">Carpool</string>
    <string name="action_settings">Settings</string>
    <string name="title">Welcome to Caarpooool</string>
    <string name="join">Join</string>
    <string name="create">Create New Session</string>
    <string name="create_title">Create New Carpool</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">Enter password here</string>
    <string name="get_code">Get Code!</string>
    <string name="session_title">Code: </string>
    <string name="join_title">Join an Existing Session</string>
    <string name="join_session">Join!</string>
    <string name="code_label">Code:</string>
    <string name="longer_password">Try a longer password</string>
    <string name="wrong_on_our_end">Whoops! Something went wrong on our end!</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="something_wrong">Oops! Something went wrong!</string>
    <string name="address">Address</string>
    <string name="address_hint">Enter an address</string>
</resources>
